@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2023, Hazelcast, Inc. All Rights Reserved.
+ * Copyright (c) 2008-2024, Hazelcast, Inc. All Rights Reserved.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,12 +16,10 @@
 
 package com.hazelcast.internal.util.phonehome;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
 import java.util.Map;
-
-import static com.hazelcast.internal.util.ExceptionUtil.rethrow;
 
 /**
  * Util class for parameters of OS and EE PhoneHome pings.
@@ -57,11 +55,7 @@ public class PhoneHomeParameterCreator {
         } else {
             hasParameterBefore = true;
         }
-        try {
-            builder.append(key).append("=").append(URLEncoder.encode(value, "UTF-8"));
-        } catch (UnsupportedEncodingException e) {
-            throw rethrow(e);
-        }
+        builder.append(key).append("=").append(URLEncoder.encode(value, StandardCharsets.UTF_8));
         parameters.put(key, value);
     }
 
